unpackaged/main/default/objects/Weekly_Sales_Call__c/Weekly_Sales_Call__c.object-meta.xml
<CustomObject>
    <label>Weekly Sales Call Update</label>
    <nameField>
        <displayFormat>WSC-{00000}</displayFormat>
        <label>Weekly IKA Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Sales Call Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>