unpackaged/main/default/objects/Weekly_Sales_Call__c/fields/Date_of_Next_Sales_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Sales_Call__c</fullName>
    <inlineHelpText>Date the Sales Call update will be given.</inlineHelpText>
    <label>Date of Next Sales Call</label>
    <required>true</required>
    <type>Date</type>
</CustomField>