unpackaged/main/default/objects/Weekly_Sales_Call__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>