unpackaged/main/default/objects/Weekly_Sales_Call__c/fields/Sales_Contact1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Weekly_Sales_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>