unpackaged/main/default/objects/Weekly_Sales_Call__c/fields/Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact__c</fullName>
    <formula>Sales_Contact1__r.FirstName &amp; &quot; &quot; &amp;  Sales_Contact1__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Contact</label>
    <type>Text</type>
</CustomField>